[package]
name = "rn2903"
version = "0.1.0"
authors = ["Leonora Tindall <nora@nora.codes>"]
edition = "2018"
license = "GPL-3.0-only"
description = "A Rusty interface for the RN2903 LoRa module's serial protocol"
homepage = "https://nora.codes/projects/rn2903"
readme = "README.md"
keywords = ["radio", "hardware", "serial", "lora"]
categories = ["api-bindings", "embedded", "hardware-support"]

[dependencies]
serialport = "3.3"
quick-error = "1"

